# file-organizer

./: .gitignore  BACKUP.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RULES.md  build_linux.sh  build_macos.sh  build_tiddesk.py  build_tiddesk_universal.py  build_windows.bat  build_with_custom_icon.py  create_dmg.py  create_professional_dmg.py  demo_backup.py  demo_rules.py  demo_rules_simple.py  pyproject.toml  requirements.txt  setup.py  test_app.py  test_rules.py  version_info.txt
.github/workflows/: ci.yml  release.yml
FileOrganizer-Universal/: README.txt
FileOrganizer-Universal/macOS/FileOrganizer.app/Contents/: Info.plist
FileOrganizer-Universal/macOS/FileOrganizer.app/Contents/Resources/: app.icns
FileOrganizer-Universal/macOS/FileOrganizer.app/Contents/_CodeSignature/: CodeResources
TidyDesk-Universal/: README.md  README.txt
TidyDesk-Universal/macOS/TidyDesk.app/Contents/: Info.plist
TidyDesk-Universal/macOS/TidyDesk.app/Contents/Resources/: app.icns
TidyDesk-Universal/macOS/TidyDesk.app/Contents/_CodeSignature/: CodeResources
docs/: API.md  README.md
file_organizer/: __init__.py  __main__.py  main.py
file_organizer/core/: __init__.py  backup_manager.py  config.py  file_organizer.py  scheduler.py
file_organizer/gui/: __init__.py  backup_manager.py  main_window.py  rule_helper.py  rules_manager.py  theme_manager.py
file_organizer/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  test_file_organizer.py
